[project]
name = "CanrotBot"
version = "9.1.0"
authors = [
    { name = "wangyw15", email = "wangyanwei15@outlook.com" }
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    "nonebot2[fastapi]>=2.4.2",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-adapter-kaiheila>=0.3.4",
    "nonebot-adapter-mirai2>=0.0.22",
    "nonebot-adapter-qq>=1.6.2",
    "nonebot-adapter-console>=0.6.0",
    "pydantic>=2",
    "beautifulsoup4",
    "httpx",
    "pillow",
    "playwright",
    "tencentcloud-sdk-python",
    "sqlalchemy>=2",
    "nonebot-plugin-alconna>=0.57.3",
    "cryptography",
    "anyio",
    "nonechat",
    "hishel",
    "ollama",
    "openai>=1.16.1",
    "fastapi>=0.115.3",
    "jinja2>=3.1.4",
    "feedparser>=6.0.11",
    "jieba>=0.42.1",
]

[project.scripts]
canrotbot = "canrotbot:run"

[project.optional-dependencies]
mariadb = ["mariadb>=1.1.10"]

[dependency-groups]
dev = [
    "nonebug>=0.4.1",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
]
lint = [
    "ruff",
]
build = [
    "nuitka"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = [
    "src",
    "src/canrotbot",
]
testpaths = [
    "tests",
]
# pytest-asyncio
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = ["I", "F"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
